# data_product_with_ml

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
app/: app.py  features.py
docs/: Makefile  conf.py  index.rst  make.bat
models/: elastic_net_model.joblib  linear_reg_model.joblib  scaler_dropped_fe.joblib  xgb_default.joblib  xgb_manual.joblib  xgboost_hyperopt.joblib
notebooks/: Misc.ipynb  Zhicong_Chen-12636736-timeseries.ipynb  gupta_tarun_24607855_randomforest.ipynb  gupta_tarun_studentid_randomforest.ipynb  model_nipeshshrestha_24605646.ipynb  removed_columns.pkl  vimalasri_chanthru-25048240-data-preparation.ipynb  vimalasri_chanthru-25048240-xgboost.ipynb  zhicong_chen_12636736-TimeSeries.ipynb  zhicong_chen_12636736-elastic_net_regression.ipynb
reports/: Appendix A_Wide_Deep_Model.docx  Group 15 - 36120 - AdvMLA - AT3 Report.docx  ~$oup 15 - 36120 - AdvMLA - AT3 Report.docx  ~WRL0005.tmp
src/models/: performance.py
