[tool.poetry]
name = "data-product-with-ml"
version = "0.1.0"
description = ""
authors = ["ChanthruV <chanthru2211@gmail.com>"]
readme = "README.md"
packages = [{include = "data_product_with_ml"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "2.0.1"
jupyterlab = "3.6.3"
scikit-learn = "1.2.2"
xgboost = "^2.0.1"
hyperopt = "^0.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
