[tool.poetry]
name = "data-product-with-ml"
version = "0.1.0"
description = ""
authors = ["ChanthruV <chanthru2211@gmail.com>"]
readme = "README.md"
packages = [{include = "data_product_with_ml"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
pandas = "2.0.1"
jupyterlab = "3.6.3"
scikit-learn = "1.2.2"
xgboost = "^2.0.1"
hyperopt = "^0.2.7"
streamlit = "^1.28.1"
statsmodels = "^0.14.0"
pmdarima = "^2.0.4"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
